<resources>
    <string name="app_name">Social Downloader</string>
    <string name="link_hint">Paste your link here</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="downloads">Downloads</string>
</resources>